# tree_chain

./: .gitignore  README.md  hardhat.config.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
backend/: .slugignore  Procfile  cifar100_cnn_model.pth  classify.py  model.py  pyproject.toml  requirements.txt  routes.py
components/Header/: Header.tsx
components/Layout/: Layout.tsx
components/Marker/: Marker.tsx
components/Verify/: example.json  index.tsx  verify.tsx
contracts/: MyNFT.sol  Verifier.sol
ezkl_js/: create_proof.ts
model/: tree_chain.ipynb
pages/: _app.tsx
pages/api/: stable_diffusion.ts
pages/collection/: collection.tsx  index.tsx
pages/explore/: explore.tsx  index.tsx
pages/scan/: index.tsx  scan.tsx
public/images/presentation/: qr_code.html
public/images/presentation/qr_code_files/: 23086390483.js  a16488430484.html  angular.inapp.min.js  app.min.css  app.min.js  create  gtm.js  hotjar-1256611.js  js  libs.min.css  libs.min.js  modernizr.js  smartphone-preview.css
scripts/: deployNFT.js  deployVerifier.js
styles/: theme.css
